[gd_scene load_steps=7 format=3 uid="uid://kgxfpyn5babi"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_hihja"]
[ext_resource type="AudioStream" uid="uid://ctx2g00s4s13n" path="res://audio/title_theme.mp3" id="1_ixsud"]
[ext_resource type="Texture2D" uid="uid://0hjwbn8vd8d8" path="res://art/title-bg.png" id="1_os576"]
[ext_resource type="Texture2D" uid="uid://bg05mj2fh6kqd" path="res://art/title-screen-icon.png" id="3_alcii"]
[ext_resource type="FontFile" uid="uid://c1vwfyoxivvfi" path="res://art/joystix monospace.otf" id="3_b7jg5"]
[ext_resource type="PackedScene" uid="uid://b8k2a8iadvhan" path="res://transition/TransitionManager.tscn" id="6_wshtf"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hihja")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_os576")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_alcii")
expand_mode = 5

[node name="ResumeGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.882353)
theme_override_fonts/font = ExtResource("3_b7jg5")
theme_override_font_sizes/font_size = 16
text = "Resume Game"

[node name="NewGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.882353)
theme_override_fonts/font = ExtResource("3_b7jg5")
theme_override_font_sizes/font_size = 16
text = "New Game"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="ExitGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ixsud")
volume_db = -4.0
autoplay = true

[node name="TransitionManager" parent="." instance=ExtResource("6_wshtf")]
layout_mode = 1
